Reorganize files, add carousel photos, style changes

--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -7,7 +7,7 @@
 
   <p>So watch out technology world.  We bring experience in HTML, CSS, JavaScript, Ionic, MongoDB, Express, AngularJS, and Node.js. We support each other through teamwork and leadership and will bring those skills to help you succeed.</p>
 
-  <p>We are Cohort 11!</p>
+  <p id="emphasis">We are Cohort 11!</p>
 
   <div id="techRow">
     <div class="tech tech1" title="MongoDB"></div>
