--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-  <p>&copy;2016 Nashville Software School</p>
+  <p>&copy;2016 <a href="http://nashvillesoftwareschool.com/" target="_blank">Nashville Software School</a> &nbsp;&bull;&nbsp; Site powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a></p>
 </footer>
