--- a/_includes/studentLife.html
+++ b/_includes/studentLife.html
@@ -9,54 +9,69 @@
 </div>
 
 <div id="studentHexPics">
-  <div class="color">
-    <img src="/images/hex3.png" class="hide" alt="preview photos of student life">
-  </div>
-  <img src="/images/hex3.png" class="hexes" alt="preview photos of student life">
+    <img src="/images/hex-3.png" class="hexes hex3" alt="preview photos of student life">
+    <img src="/images/hex-5.png" class="hexes hex5" alt="preview photos of student life">
+    <img src="/images/hex-7.png" class="hexes hex7" alt="preview photos of student life">
 </div>
 
 <div id="studentLifePics">
 
   <div class="carousel">
-    <a class="carousel-item" href="#one!" title="Danielle, Stephanie G., Sefora, Amy Lee, Tina, Stephanie K, JessaWynne, Marybeth"><img src="/images/cpic1.jpg"></a>
-    <a class="carousel-item" href="#two!" title="Allen, Tina, Carmen, Stephanie K"><img src="/images/cpic2.jpg"></a>
-    <a class="carousel-item" href="#three!" title="Sefora, Stephanie G., Carmen, Micah, Mike U., Anderson"><img src="/images/cpic3.jpg"></a>
-    <a class="carousel-item" href="#four!" title="Emma"><img src="/images/cpic4.jpg"></a>
-    <a class="carousel-item" href="#five!" title="JessWynne, Ben, Jason, Matt O., Emma, Andrew, Anderson, Brian, Nathan, Red"><img src="/images/cpic5.jpg"></a>
-    <a class="carousel-item" href="#six!" title="Jason" ><img src="/images/cpic6.jpg"></a>
-    <a class="carousel-item" href="#seven!" title="Matt O."><img src="/images/cpic7.jpg"></a>
-    <a class="carousel-item" href="#eight!" title="Brian, Matt O., Nathan"><img src="/images/cpic8.jpg"></a>
-    <a class="carousel-item" href="#nine!" title="Nathan"><img src="/images/cpic9.jpg"></a>
-    <a class="carousel-item" href="#ten!" title="JessaWynn"><img src="/images/cpic10.jpg"></a>
-    <a class="carousel-item" href="#eleven!" title="Matt O., Andrew, Anderson, Brian"><img src="/images/cpic11.png"></a>
-    <a class="carousel-item" href="#twelve!" title="Ryan, Mike C."><img src="/images/cpic12.jpg"></a>
-    <a class="carousel-item" title="Stephanie K., JessaWynn, Christina, Caleb, Matt O., Jacob, Anderson, Amy Lee, Micah, Allen, Tina"href="#thirteen!"><img src="/images/cpic13.jpg"></a>
-    <a class="carousel-item" href="#fourteen!" title="Emma, Ben"><img src="/images/cpic14.jpg"></a>
-    <a class="carousel-item" href="#fifteen!" title="Ryan, Mike C."><img src="/images/cpic15.jpg"></a>
-    <a class="carousel-item" href="#sixteen!"title="Ben"><img src="/images/cpic16.jpg" ></a>
-    <a class="carousel-item" href="#seventeen!" title="JessaWynn, Christina, Caleb, Matt O., Jacob, Amy Lee, Micah, Mike U., Emma, Brian"><img src="/images/cpic17.jpg"></a>
-    <a class="carousel-item" href="#eighteen!" title="Scott, Sefora, Mike, Christina, JessaWynn, Stephanie K., Brian, Anderson, Jacob, Matt O., Ryan"><img src="/images/cpic18.jpg"></a>
-    <a class="carousel-item" href="#nineteen!" title="Jacob, JessaWynn"><img src="/images/cpic19.jpg"></a>
-    <a class="carousel-item" href="#twenty!" title="Sefora, Stephanie G., Jason"><img src="/images/cpic20.jpg"></a>
-    <a class="carousel-item" href="#twentyOne!" title="Andri"><img src="/images/cpic21.jpg"></a>
-    <a class="carousel-item" href="#twentyTwo!" title="Red, Anderson"><img src="/images/cpic22.jpg"></a>
-    <a class="carousel-item" href="#twentyThree!" title="Ben"><img src="/images/cpic23.jpg"></a>
-    <a class="carousel-item" href="#twentyFour!" title="Allen, Anderson, Matt O., Mike C."><img src="/images/cpic24.jpg"></a>
-    <a class="carousel-item" href="#twentyFive!" title="Anderson, Brian"><img src="/images/cpic25.jpg"></a>
-    <a class="carousel-item" href="#twentySix!" title="Stephanie G., Mike C., Anderson, Sefora, Christina"><img src="/images/cpic26.jpg"></a>
-    <a class="carousel-item" href="#twentySeven!" title="Micah, Mike U."><img src="/images/cpic27.jpg"></a>
-    <a class="carousel-item" href="#twentyEight!" title="Jacob"><img src="/images/cpic28.jpg"></a>
-    <a class="carousel-item" href="#twentyNine!" title="JessaWynn" ><img src="/images/cpic29.jpg"></a>
-    <a class="carousel-item" href="#thirty!" title="Brian, Andrew"><img src="/images/cpic30.jpg"></a>
-    <a class="carousel-item" href="#thirtyOne!" title="Tina"><img src="/images/cpic31.jpg"></a>
-    <a class="carousel-item" href="#thirtyTwo!" title="Republic School Winners"><img src="/images/cpic32.jpg"></a>
-    <a class="carousel-item" href="#thirtyThree!" title="Jacob, JessaWynn "><img src="/images/cpic33.jpg"></a>
-    <a class="carousel-item" href="#thirtyFour!" title="Ben, Anderson"><img src="/images/cpic34.jpg"></a>
-    <a class="carousel-item" href="#thirtyFive!" title="Emma, Matthew H."><img src="/images/cpic35.jpg"></a>
-    <a class="carousel-item" href="#thirtySix!" title="Amy Lee"><img src="/images/cpic36.jpg"></a>
-    <a class="carousel-item" href="#thirtySeven!" title="Nathan, Brian"><img src="/images/cpic37.jpg"></a>
-    <a class="carousel-item" href="#thirtyEight!" title="Amy Lee, Andrew"><img src="/images/cpic38.jpg"></a>
-    <a class="carousel-item" href="#thirtyNine!" title="Brian S., Brian, Ryan, Mike C."><img src="/images/cpic39.jpg"></a>
+    <a class="carousel-item" title="Jacob, Mike C."><img src="/images/carousel/jacob-mikec.jpg"></a>
+
+    <a class="carousel-item" title="Scott, Sefora, Mike C., Christina, JessaWynne, Stephanie K., Brian, Anderson, Jacob"><img src="/images/carousel/back-end-class.jpg"></a>
+
+    <a class="carousel-item" title="Stephanie K."><img src="/images/carousel/stephaniek-girlgeek.jpg"></a>
+
+    <a class="carousel-item" title="Danielle, Stephanie G., Sefora, Amy Lee, Tina, Stephanie K, JessaWynne, Marybeth"><img src="/images/carousel/women-get-it.jpg"></a>
+
+    <a class="carousel-item" title="Allen, Tina, Carmen, Stephanie K"><img src="/images/carousel/allen-tina-carmen-stephaniek.jpg"></a>
+
+    <a class="carousel-item" title="Stephanie G., Sefora"><img src="/images/carousel/stephanieg-sefora.jpg"></a>
+
+    <a class="carousel-item" title="Sefora, Stephanie G., Carmen, Micah, Mike U., Anderson"><img src="/images/carousel/back-end-class4.jpg"></a>
+
+    <a class="carousel-item" title="Jason" ><img src="/images/carousel/jason.jpg"></a>
+
+    <a class="carousel-item" title="JessaWynne, Ben, Jason, Mathew O., Emma, Andrew, Anderson, Brian, Nathan, Red"><img src="/images/carousel/make-it.jpg"></a>
+
+    <a class="carousel-item" title="Brian, Mathew O., Nathan"><img src="/images/carousel/brian-nathan-mat.jpg"></a>
+
+    <a class="carousel-item" title="JessaWynne"><img src="/images/carousel/jessa-kids-code.jpg"></a>
+
+    <a class="carousel-item" title="Stephanie K., JessaWynne, Christina, Caleb, Mathew O., Jacob, Anderson, Amy Lee, Micah, Allen, Tina"><img src="/images/carousel/back-end-class3.jpg"></a>
+
+    <a class="carousel-item" title="Emma, Ben"><img src="/images/carousel/emma-ben.jpg"></a>
+
+    <a class="carousel-item" title="Ryan, Mike C."><img src="/images/carousel/ryan-mikec.jpg"></a>
+
+    <a class="carousel-item" title="Red, Caleb, Matthew H."><img src="/images/carousel/red-caleb-matthew.jpg"></a>
+
+    <a class="carousel-item" title="Ben"><img src="/images/carousel/ben-ping-pong.jpg"></a>
+
+    <a class="carousel-item" title="Christina, Caleb, Mathew O., Jacob, Amy Lee, Micah, Mike U., Emma, Brian"><img src="/images/carousel/back-end-class2.jpg"></a>
+
+    <a class="carousel-item" title="Andri"><img src="/images/carousel/andri.jpg"></a>
+
+    <a class="carousel-item" title="Stephanie G., Mike C., Anderson, Sefora, Christina"><img src="/images/carousel/nashjs-meetup-3-9-16.jpg"></a>
+
+    <a class="carousel-item" title="Sefora, Stephanie G., Jason"><img src="/images/carousel/sefora-stephanieg-jason.jpg"></a>
+
+    <a class="carousel-item" title="Jacob, JessaWynne"><img src="/images/carousel/jacob-jessa-foosball.jpg"></a>
+
+    <a class="carousel-item" title="Ben"><img src="/images/carousel/ben.jpg"></a>
+
+    <a class="carousel-item" title="Allen, Anderson, Mathew O., Mike C."><img src="/images/carousel/nashjs-meetup-2-10-16.jpg"></a>
+
+    <a class="carousel-item" title="Micah, Mike U."><img src="/images/carousel/micah-mikeu.jpg"></a>
+
+    <a class="carousel-item" title="Nathan, Brian"><img src="/images/carousel/nathan-brian-ping-pong.jpg"></a>
+
+    <a class="carousel-item" title="Tina"><img src="/images/carousel/tina-kids-code.jpg"></a>
+
+    <a class="carousel-item" title="Ben, Anderson"><img src="/images/carousel/ben-anderson.jpg"></a>
+
+    <a class="carousel-item" title="Brian S., TA Brian"><img src="/images/carousel/brian-ta-brian.jpg"></a>
   </div>
 </div>
 
