--- a/_includes/students.html
+++ b/_includes/students.html
@@ -18,7 +18,7 @@
                   </div>
                   <div class="back">
                   <h2>{{post.firstName}} {{post.lastName}}</h2>
-                  <p>{{post.body}}</p>
+                  <p class="studentText">{{post.body}}</p>
                   <p id="links">
                     <a href="{{post.websiteUrl}}">Portfolio</a> | <a href="{{post.githubUrl}}">Github</a> | <a href="{{post.linkedInUrl}}">LinkedIn</a>
                   </p>
