Reorganize photos, add carousel pic, add class header pic, minor fixes

--- a/_includes/studentLife.html
+++ b/_includes/studentLife.html
@@ -43,6 +43,8 @@
 
     <a class="carousel-item" title="Emma, Ben"><img src="/images/carousel/emma-ben.jpg"></a>
 
+    <a class="carousel-item" title="Jacob, Mat O., Tina, Carmen, Allen"><img src="/images/carousel/global-game-jam.jpg"></a>
+
     <a class="carousel-item" title="Ryan, Mike C."><img src="/images/carousel/ryan-mikec.jpg"></a>
 
     <a class="carousel-item" title="Red, Caleb, Matthew H."><img src="/images/carousel/red-caleb-matthew.jpg"></a>
