--- a/_includes/students.html
+++ b/_includes/students.html
@@ -20,7 +20,7 @@
                   <h2>{{post.firstName}} {{post.lastName}}</h2>
                   <p class="studentText">{{post.body}}</p>
                   <p id="links">
-                    <a href="{{post.websiteUrl}}">Portfolio</a> | <a href="{{post.githubUrl}}">Github</a> | <a href="{{post.linkedInUrl}}">LinkedIn</a>
+                    <a href="{{post.websiteUrl}}" target="_blank">Portfolio</a> | <a href="{{post.githubUrl}}" target="_blank"">Github</a> | <a href="{{post.linkedInUrl}}" target="_blank"">LinkedIn</a>
                   </p>
                   </div>
                 </div>
