--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header id="videoHeader">
   <!-- <video src="paypal.mp4" autoplay style="width: 100%;"></video> -->
-  <img src="/images/nssgroup.jpg">
+  <img src="/images/Final-Images-NSS/cohort11-class-photos/NSS-cohort-11.jpg">
   <div class="headline">
     <p id="pageHead"><span class="scrollText"></span><span class='blinking-cursor'>&#9646;</span></p>
   </div>
