fix weird margin

--- a/styles/style2.scss
+++ b/styles/style2.scss
@@ -56,13 +56,13 @@ p {
 	line-height: 1.0em;
 	width: 280px;
 	margin: 0 auto;
-	left: 50%;
+	// left: 50%;
 }
 
 #pageHead {
 	text-align: center;
 	position: relative;
-	left: -50%;
+	// left: -50%;
 	vertical-align: top;
 }
 
