centering main header on mobile view

--- a/styles/style2.scss
+++ b/styles/style2.scss
@@ -54,7 +54,7 @@ p {
 	font-family: 'Source Code Pro', monospace;
 	font-size: 1.4em;
 	line-height: 1.0em;
-	width: 280px;
+	width: 100%;
 	margin: 0 auto;
 	// left: 50%;
 }
