styling fix for header

--- a/styles/style2.scss
+++ b/styles/style2.scss
@@ -56,13 +56,12 @@ p {
 	line-height: 1.0em;
 	width: 100%;
 	margin: 0 auto;
-	// left: 50%;
+  padding: 0 %5;
 }
 
 #pageHead {
 	text-align: center;
 	position: relative;
-	// left: -50%;
 	vertical-align: top;
 }
 
@@ -526,7 +525,6 @@ MEDIA QUERIES
 	#videoHeader .headline {
 		font-size: 1.4em;
 		line-height: 1.0em;
-		width: 325px;
 	}
 
 	.blinking-cursor {
@@ -539,7 +537,6 @@ MEDIA QUERIES
 
 	#videoHeader .headline {
 		font-size: 1.8em;
-		width: 420px;
 		top: 25px;
 	}
 
