--- a/_includes/students.html
+++ b/_includes/students.html
@@ -1,10 +1,10 @@
 <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingTwo">
       <h1 class="panel-title" id="classBanner">
-        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">.ourClass {<span class="glyphicon glyphicon-chevron-down"></span></a>
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">.ourClass {<span class="glyphicon glyphicon-chevron-down"></span></a>
       </h1>
     </div>
-    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+    <div id="collapseTwo" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingTwo">
       <div class="panel-body">
         <div id="studentPics">
 
