--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header id="videoHeader">
-  <video src="/images/Final-Images-NSS/cohort11-class-photos/NSS.mp4" autoplay></video>
+  <video src="/images/Final-Images-NSS/cohort11-class-photos/NSS.mp4" autoplay poster="/images/Final-Images-NSS/cohort11-class-photos/capture.jpg"></video>
   <div class="headline">
     <p id="pageHead"><span class="scrollText"></span><span class='blinking-cursor'>&#9646;</span></p>
   </div>
