--- a/_includes/students.html
+++ b/_includes/students.html
@@ -1,7 +1,7 @@
 <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingTwo">
       <h1 class="panel-title" id="classBanner">
-        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">.ourClass {<span class="glyphicon glyphicon-chevron-down"></span></a>
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">.ourClass {<span class="glyphicon glyphicon-resize-vertical"></span></a>
       </h1>
     </div>
     <div id="collapseTwo" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingTwo">
@@ -20,7 +20,7 @@
                   <h2>{{post.firstName}} {{post.lastName}}</h2>
                   <p class="studentText">{{post.body}}</p>
                   <p id="links">
-                    <a href="{{post.websiteUrl}}" target="_blank">Portfolio</a> | <a href="{{post.githubUrl}}" target="_blank"">Github</a> | <a href="{{post.linkedInUrl}}" target="_blank"">LinkedIn</a>
+                    <a href="{{post.websiteUrl}}" target="_blank">Portfolio</a>&nbsp; | &nbsp;<a href="{{post.githubUrl}}" target="_blank">Github</a>&nbsp; | &nbsp;<a href="{{post.linkedInUrl}}" target="_blank">LinkedIn</a>
                   </p>
                   </div>
                 </div>
