--- a/styles/style2.scss
+++ b/styles/style2.scss
@@ -53,7 +53,7 @@ p {
 	top: 20px;
 	color: #fff;
 	font-family: 'Source Code Pro', monospace;
-	font-size: 1.4em;
+	font-size: 1.3em;
 	line-height: 1.0em;
 	width: 100%;
 	margin: 0 auto;
@@ -69,7 +69,7 @@ p {
 .blinking-cursor {
   font-weight: 100;
   display: inline;
-  font-size: 36px;
+  font-size: 34px;
   color: #fff;
   position: relative;
   bottom: -6px;
@@ -136,7 +136,9 @@ p {
   color: #fff;
   text-shadow: 0 1px 3px $NSS-darker;
   padding: 15px 20px;
-  margin-bottom: 0;
+  margin-bottom: -6px;
+  position: relative;
+  top: -5px;
 }
 
 #introText {
@@ -246,6 +248,13 @@ p {
 
 #classBanner span {
   float: right;
+  background-color: #142c39;
+  box-shadow: inset 0px 0px 10px rgba(0,0,0,0.6);
+  border-radius: 5px;
+  padding: 5px;
+  position: relative;
+  top: -4px;
+  right: -4px;
 }
 
 #classBanner span:hover,
@@ -364,7 +373,7 @@ p {
     text-align: center;
     position: absolute;
     bottom: 0;
-    left: 28px;
+    left: 21px;
   }
 
   a {
@@ -526,11 +535,16 @@ MEDIA QUERIES
 	#videoHeader .headline {
 		font-size: 1.4em;
 		line-height: 1.0em;
+    padding: 0 4%;
 	}
 
 	.blinking-cursor {
 	  font-size: 30px;
 	}
+
+  footer {
+    padding: 15px;
+  }
 
 }
 
@@ -539,6 +553,7 @@ MEDIA QUERIES
 	#videoHeader .headline {
 		font-size: 1.8em;
 		top: 25px;
+    padding: 0 8%;
 	}
 
 	.blinking-cursor {
@@ -616,7 +631,7 @@ MEDIA QUERIES
 @media (min-width: 768px) {
 
   #videoHeader .headline {
-    font-size: 2.0em;
+    font-size: 1.9em;
   }
 
   .blinking-cursor {
