--- a/styles/style2.scss
+++ b/styles/style2.scss
@@ -302,8 +302,9 @@ p {
 	margin: 30px 15px;  // 10px 0
 }
 	/* flip the pane when hovered */
-.flip-container:hover .flipper, .flip-container.hover .flipper {
+.flip-container:hover .flipper, .flip-container.hover .flipper, .flip-container:active .flipper {
 	transform: rotateY(180deg);
+  cursor: pointer;
 }
 
 .flip-container, .front, .back {
