--- a/styles/style2.scss
+++ b/styles/style2.scss
@@ -297,7 +297,8 @@ p {
 
 /* entire individual container, keeps perspective */
 .flip-container {
-	perspective: 1000;
+  -webkit-perspective: 1000px;
+	perspective: 1000px;
 	display: inline-block;
 	margin: 30px 15px;  // 10px 0
 }
