--- a/styles/style2.scss
+++ b/styles/style2.scss
@@ -304,10 +304,26 @@ p {
 }
 	/* flip the pane when hovered */
 // .flip-container:hover .flipper, .flip-container.hover .flipper, .flip-container:active .flipper {
-.flip-container:hover .flipper, .flip-container.hover .flipper, .flip-container.flip .flipper {
+.flip-container:hover .front {
   -webkit-transform: rotateY(180deg);
 	transform: rotateY(180deg);
   cursor: pointer;
+}
+
+.flip-container:hover .back {
+  -webkit-transform: rotateY(0);
+  transform: rotateY(0);
+  cursor: pointer;
+}
+
+.flip-container.flipped .front {
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
+
+.flip-container.flipped .back {
+  -webkit-transform: rotateY(0);
+  transform: rotateY(0);
 }
 
 .flip-container, .front, .back {
@@ -317,7 +333,7 @@ p {
 }
 
 /* flip speed goes here */
-.flipper {
+.front, .back {
 	transition: 0.6s;
   -webkit-transform-style: preserve-3d;
 	transform-style: preserve-3d;
@@ -326,6 +342,7 @@ p {
 
 /* hide back of pane during swap */
 .front, .back {
+  -webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
   box-shadow: 1px 1px 2px #000;
 	position: absolute;
