--- a/styles/style2.scss
+++ b/styles/style2.scss
@@ -322,8 +322,8 @@ p {
 }
 
 .flip-container.flipped .back {
-  -webkit-transform: rotateY(0);
-  transform: rotateY(0);
+  -webkit-transform: rotateY(-180deg);
+  transform: rotateY(-180deg);
 }
 
 .flip-container, .front, .back {
