--- a/styles/style2.scss
+++ b/styles/style2.scss
@@ -321,9 +321,9 @@ p {
   transform: rotateY(180deg);
 }
 
-.flip-container.flipped .back {
-  -webkit-transform: rotateY(-180deg);
-  transform: rotateY(-180deg);
+.flip-container .back {
+  -webkit-transform: rotateY(0);
+  transform: rotateY(0);
 }
 
 .flip-container, .front, .back {
