--- a/_includes/students.html
+++ b/_includes/students.html
@@ -12,8 +12,9 @@
             {% for post in site.posts %}
               {% if post.flipCard == "true" %}
              <div class="flip-container " ontouchstart="this.classList.toggle('hover');">
+
                 <div class="flipper">
-                  <div class="front" style="background-image: url({{post.imgUrl}})">
+                  <div class="front" style="background-image: url({{post.imgUrl}})"><span class="info">i</span>
                   <!-- front content -->
                   </div>
                   <div class="back">
