Add SoundCloud link to interviews

--- a/_includes/students.html
+++ b/_includes/students.html
@@ -8,6 +8,15 @@
       <div class="panel-body">
         <div id="studentPics">
 
+        <a href="https://soundcloud.com/nashville-software-school/sets/cohort-11" target="_blank">
+          <div id="soundcloud">
+            <img src="/images/soundcloud.png" alt="SoundCloud logo">
+            <p id="sctext1">Learn more about the members of our cohort!</p>
+            <p id="sctext2"><strong>Click here</strong> to listen to our Demo Day interviews.</p>
+
+          </div>
+        </a>
+
         <div id="gridWrapper">
             {% for post in site.posts %}
               {% if post.flipCard == "true" %}
